--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 ldap3==2.9.1
-pyinstaller==4.7
+pyinstaller>=5.13.1
 PySimpleGUI==4.56.0
-cryptography==36.0.1
-PyQt5==5.15.6
-gspread==5.0.0
+cryptography>=41.0.3
+PyQt5>=5.15.9
+gspread>=5.0.0
 Cython==0.29.24
 oauth2client==4.1.3
-google-api-python-client==1.12.8
-pandas==1.4.1
-tqdm==4.64.0
+google-api-python-client>=2.97.0
+pandas>=2.0.3
+tqdm>=4.66.1
+certifi>=2022.9.24
