--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 ldap3==2.9.1
-pyinstaller>=5.13.1
+pyinstaller==5.13.1
 PySimpleGUI==4.56.0
-cryptography>=41.0.3
-PyQt5>=5.15.9
-gspread>=5.0.0
+cryptography==41.0.3
+PyQt5==5.15.9
+gspread==5.0.0
 Cython==0.29.24
 oauth2client==4.1.3
-google-api-python-client>=2.97.0
-pandas>=2.0.3
-tqdm>=4.66.1
+google-api-python-client==2.97.0
+pandas==2.0.3
+tqdm==4.66.1
 certifi>=2022.9.24
+keyboard==0.13.5
+qt-material==2.14
